--- a/About.Html
+++ b/About.Html
@@ -68,7 +68,7 @@
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
         <div style="display: inline; "><img src="/SOSE_logo.png"
-                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Dbse_Logo.png"
+                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Dbse_Logo.png"
                 style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
     </footer>
 </body>
