--- a/About.Html
+++ b/About.Html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
