--- a/Academics.Html
+++ b/Academics.Html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
@@ -380,7 +380,7 @@
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
         &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="/SOSE_logo.png"  style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Dbse_Logo.png" style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
+        <div style="display: inline; "><img src="/SOSE_logo.png"  style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Dbse_Logo.png" style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
     </footer>
 </body>
 
