--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
@@ -78,17 +78,17 @@
         style="font-size:5vh; text-align: center; margin-top: 2vh; color: rgb(10, 45, 222); background-color:aliceblue;">
         SCHOOL GALLERY</div>
     <div class="slides">
-        <img src="/Pic1.jpg" id="Pic1">
-        <img src="/Pic2.jpg" id="Pic2">
-        <img src="/Pic3.jpg" id="Pic3">
-        <img src="/Pic4.jpg" id="Pic4">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic1.jpg" id="Pic1">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic2.jpg" id="Pic2">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic3.jpg" id="Pic3">
+        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/pic4.jpg" id="Pic4">
     </div>
     </li>
     <footer>
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="/SOSE_logo.png"
+        <div style="display: inline; "><img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Dbse_Logo.png"
             style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Dbse_Logo.png"
             style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
         </footer>
