Update and rename index.html to HTML/index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-SchoolBud</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,14 +20,14 @@
 
 <body>
     <div id="Section-1">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="About.Html" id="About_bt" style="font-size: 2vh;">About</a></li>
-                <li><a href="Academics.Html" id="Academics_bt" style="font-size: 2vh;">Academics</a></li>
-                <li><a href="Admissions.HTML" id="Admissions_bt" style="font-size: 2vh;">Admissions</a></li>
+                <li><a href="/HTML/About.Html" id="About_bt" style="font-size: 2vh;">About</a></li>
+                <li><a href="/HTML/Academics.Html" id="Academics_bt" style="font-size: 2vh;">Academics</a></li>
+                <li><a href="/HTML/Admissions.HTML" id="Admissions_bt" style="font-size: 2vh;">Admissions</a></li>
             </ul>
         </Nav>
     </div>
@@ -78,18 +78,18 @@
         style="font-size:5vh; text-align: center; margin-top: 2vh; color: rgb(10, 45, 222); background-color:aliceblue;">
         SCHOOL GALLERY</div>
     <div class="slides">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic1.jpg" id="Pic1">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic2.jpg" id="Pic2">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Pic3.jpg" id="Pic3">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/pic4.jpg" id="Pic4">
+        <img src="/IMAGES/Pic1.jpg" id="Pic1">
+        <img src="/IMAGES/Pic2.jpg" id="Pic2">
+        <img src="/IMAGES/Pic3.jpg" id="Pic3">
+        <img src="/IMAGES/pic4.jpg" id="Pic4">
     </div>
     </li>
     <footer>
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Dbse_Logo.png"
-            style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Dbse_Logo.png"
+        <div style="display: inline; "><img src="/IMAGES/Dbse_Logo.png"
+            style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/IMAGES/Dbse_Logo.png"
             style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
         </footer>
     </body>
