--- a/HTML/About.Html
+++ b/HTML/About.Html
@@ -20,7 +20,7 @@
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="/HTML/index.html" id="Home_bt">Home</a></li>
+                <li><a href="index.html" id="Home_bt">Home</a></li>
                 <li><a href="/HTML/Academics.Html" id="Academics_bt">Academics</a></li>
                 <li><a href="/HTML/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
             </ul>
