--- a/HTML/Academics.Html
+++ b/HTML/Academics.Html
@@ -20,9 +20,9 @@
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="/HTML/index.html" id="Home_bt">Home</a></li>
-                <li><a href="/HTML/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
-                <li><a href="/HTML/About.Html" id="About_bt">About</a></li>
+                <li><a href="/Personal_Project/index.html" id="Home_bt">Home</a></li>
+                <li><a href="/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
+                <li><a href="/About.Html" id="About_bt">About</a></li>
             </ul>
         </Nav>
     </div>
