--- a/HTML/About.Html
+++ b/HTML/About.Html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-SchoolBud</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/Personal_Project/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,9 +20,9 @@
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="index.html" id="Home_bt">Home</a></li>
-                <li><a href="/HTML/Academics.Html" id="Academics_bt">Academics</a></li>
-                <li><a href="/HTML/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
+                <li><a href="/Personal_Project/index.html" id="Home_bt">Home</a></li>
+                <li><a href="/Academics.Html" id="Academics_bt">Academics</a></li>
+                <li><a href="/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
             </ul>
         </Nav>
     </div>
