Update and rename Admissions.HTML to HTML/Admissions.HTML

--- a/HTML/Admissions.HTML
+++ b/HTML/Admissions.HTML
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admissions-SchoolBud</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Personal_Project/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,14 +15,14 @@
 
 <body>
     <div id="Section-1">
-        <img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="/Personal_Project/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="index.html" id="Home_bt">Home</a></li>
-                <li><a href="Academics.Html" id="Academics_bt">Academics</a></li>
-                <li><a href="About.Html" id="About_bt">About</a></li>
+                <li><a href="/Personal_Project/index.html" id="Home_bt">Home</a></li>
+                <li><a href="/Academics.Html" id="Academics_bt">Academics</a></li>
+                <li><a href="/About.Html" id="About_bt">About</a></li>
             </ul>
         </Nav>
     </div>
@@ -62,8 +62,8 @@
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="https://github.com/Naman-CR7/personalprojectimages/blob/e574304b1e226fcd08875b76c97b5e692204d613/Dbse_Logo.png"
-                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Dbse_Logo.png"
+        <div style="display: inline; "><img src="/IMAGES/SOSE_Logo.png"
+                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/IMAGES/Dbse_Logo.png"
                 style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
     </footer>
 </body>
