--- a/HTML/Admissions.HTML
+++ b/HTML/Admissions.HTML
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admissions-SchoolBud</title>
-    <link rel="stylesheet" href="/Personal_Project/style.css">
+    <link rel="stylesheet" href="/Personal_Project/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
