--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="/Personal_Project/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
@@ -78,18 +78,18 @@
         style="font-size:5vh; text-align: center; margin-top: 2vh; color: rgb(10, 45, 222); background-color:aliceblue;">
         SCHOOL GALLERY</div>
     <div class="slides">
-        <img src="/IMAGES/Pic1.jpg" id="Pic1">
-        <img src="/IMAGES/Pic2.jpg" id="Pic2">
-        <img src="/IMAGES/Pic3.jpg" id="Pic3">
-        <img src="/IMAGES/pic4.jpg" id="Pic4">
+        <img src="/Personal_Project/IMAGES/Pic1.jpg" id="Pic1">
+        <img src="/Personal_Project//IMAGES/Pic2.jpg" id="Pic2">
+        <img src="/Personal_Project//IMAGES/Pic3.jpg" id="Pic3">
+        <img src="/Personal_Project//IMAGES/pic4.jpg" id="Pic4">
     </div>
     </li>
     <footer>
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="/IMAGES/Dbse_Logo.png"
-            style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/IMAGES/Dbse_Logo.png"
+        <div style="display: inline; "><img src="/Personal_Project/IMAGES/Dbse_Logo.png"
+            style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Personal_Project/IMAGES/Dbse_Logo.png"
             style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
         </footer>
     </body>
