--- a/HTML/Academics.Html
+++ b/HTML/Academics.Html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academics-SchoolBuds</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/Personal_Project/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,7 +15,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="/Personal_Project/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
