--- a/HTML/About.Html
+++ b/HTML/About.Html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="Section-1">
-        <img src="/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
+        <img src="/Personal_Project/IMAGES/SOSE_logo.png" alt="School_Logo" id="School_Logo">
     </div>
     <div class="boiler ">
         <Nav>
