--- a/HTML/About.Html
+++ b/HTML/About.Html
@@ -67,8 +67,8 @@
         <div style="display: inline; font-size: 2.5vh;margin-inline: 5vw;" class="poppins-light">
             &#169; DBRA ASOSE SECTOR - 5 DWARKA &#169; DBSE, SCHOOL-BUD
         </div>
-        <div style="display: inline; "><img src="/IMAGES/SOSE_logo.png"
-                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/IMAGES/Dbse_Logo.png"
+        <div style="display: inline; "><img src="/Personal_Project/IMAGES/SOSE_logo.png"
+                style="width: 10vw; height: 15vh; margin-right: 5vw;"><img src="/Personal_Project/IMAGES/Dbse_Logo.png"
                 style="width: 10vw; height: 15vh; margin-right: 5vw;"></div>
     </footer>
 </body>
