--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="boiler ">
         <Nav>
             <ul class="poppins-light">
-                <li><a href="/HTML/About.Html" id="About_bt" style="font-size: 2vh;">About</a></li>
-                <li><a href="/HTML/Academics.Html" id="Academics_bt" style="font-size: 2vh;">Academics</a></li>
-                <li><a href="/HTML/Admissions.HTML" id="Admissions_bt" style="font-size: 2vh;">Admissions</a></li>
+                <li><a href="/Personal_Project/HTML/About.Html" id="About_bt" style="font-size: 2vh;">About</a></li>
+                <li><a href="/Personal_Project/HTML/Academics.Html" id="Academics_bt" style="font-size: 2vh;">Academics</a></li>
+                <li><a href="/Personal_Project/HTML/Admissions.HTML" id="Admissions_bt" style="font-size: 2vh;">Admissions</a></li>
             </ul>
         </Nav>
     </div>
