--- a/HTML/Academics.Html
+++ b/HTML/Academics.Html
@@ -21,8 +21,8 @@
         <Nav>
             <ul class="poppins-light">
                 <li><a href="/Personal_Project/index.html" id="Home_bt">Home</a></li>
-                <li><a href="/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
-                <li><a href="/About.Html" id="About_bt">About</a></li>
+                <li><a href="/Personal_Project/Admissions.HTML" id="Admissions_bt">Admissions</a></li>
+                <li><a href="/Personal_Project/About.Html" id="About_bt">About</a></li>
             </ul>
         </Nav>
     </div>
